--- a/vignettes/AluminaKinetics.Rmd
+++ b/vignettes/AluminaKinetics.Rmd
@@ -7,7 +7,31 @@ output: html_notebook
 ## Subroutine to evaluate ET(I)
 
 ```{r}
-YY <- function(B,AA) (1-B)/AA
+library(sintering)
+library(dplyr)
 
+data <- alumina %>% filter(Sample == "65")
+
+YY <- function(B,AA) (1-B)/AA
+Y<-data$y
+T<-data$t
+I <- nrow(data)
+R<-I
+
+#if (Y[1] -0 < 0.01) drop Y[1]?
+
+##Find K
+Sum1Y <- sum(log(Y))
+Sum1T <- sum(T)
+Sum1N <- sum(T * log(Y - T*Sum1Y/R))
+Sum1D <- sum(T^2 - T*Sum1T/R)
+XK <- Sum1N /Sum1D
+
+##Find log A = C
+SumC <- sum((log (Y) - XK*T)/R)
+XC <- SumC
+
+#if (XC > 88) do something
+XA <- exp(XC)
 ```
 
