--- a/vignettes/AluminaKinetics.Rmd
+++ b/vignettes/AluminaKinetics.Rmd
@@ -13,18 +13,23 @@ library(dplyr)
 data <- alumina %>% filter(Sample == "65")
 
 YY <- function(B,AA) (1-B)/AA
-Y<-data$y
-T<-data$t
+S <- seq(.25,2,by=.25) #Letting the exponent n float
+Y <- data$y
+T <- data$t
 I <- seq(nrow(data))
 L <- length(I)
 
 G <- 1e8
 MM <- L-2
+N<-1:8
 
 i <- 3 ## temporary fix I
+n<-1 ## temporary fix for N
 
-for (I in c(3:MM)) {
- #call eval
+for (N in N){
+  for (I in c(3:MM)) {
+    #call eval
+  }
 }
 
 R<-i # temporary fix I
@@ -53,7 +58,11 @@ MP <- i+1
 AA <- 2 * (1-Y[L])
 
 Sum2Y <- sum(log(YY(Y[MO],AA)))
-Sum2T <- T[MO]^S(1)
+Sum2T <- sum(T[MO:L]^S[n])
+Sum2N <- sum(T[MO:L]^S[n] * log(YY(Y[MO:L],AA))-T[MO:L]^S[n]*Sum2Y)
+Sum2D <- sum(T[MO:L]^S[n] *Sum2T/R1 - T[MO:L]^(2*S[n]))
+XJ <- Sum2N/Sum2D
+
 
 ```
 
