--- a/vignettes/appendix2.Rmd
+++ b/vignettes/appendix2.Rmd
@@ -2,8 +2,9 @@
 title: "Appendix II"
 author: "Dennis Taylor"
 date: "12/24/2020"
-output: html_document
----
+output:
+  html_document:
+    mathjax: "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
